tilføjet en kommentar ommkring description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HundePoten | Forside</title>
     <link rel="stylesheet" href="../Hundepoten/CSS/style.css">
+    <!--indsæt måske en description-->
 </head>
 <body>
     
