--- a/index.html
+++ b/index.html
@@ -8,6 +8,75 @@
     <!--indsæt måske en description-->
 </head>
 <body>
+    <header>
+        <nav class="mobil">
+            <a href="index.html">
+                <img src="../Hundepoten/img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
+            </a>
+        </nav>
+        <nav class="desktop">
+            <a href="index.html">
+                <img src="../Hundepoten/img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
+                HundePoten
+            </a>
+            <ul>
+                <li>FYLD UD</li>
+                <li>FYLD UD</li>
+                <li>
+                    <form>
+                        <label class="visually-hidden" for="search"></label>
+                        <input type="search" id="search" placeholder="Søg" required>
+                    </form>
+                </li>
+            </ul>
+        </nav>
+    </header>
     
+    <section>
+        <h1>
+            Mangler i tips eller information omkring jeres hund?
+        </h1>
+
+        <p>
+            <strong>Så er i kommet til det rigtige sted!</strong> Her hos HundePoten har vi samlet en masse indformationer omkring træning, pleje og sundhed, som alt sammen sikre at i har en sund og rask hund.
+        </p>
+
+        <a href="guide.html">Se vores guide!</a>
+    </section>
+
+    <section>
+        <h2>
+            Mød HundePoten
+        </h2>
+        
+        <p>
+            Velkommen til Hundepoten, din guide til hundesundhed, pleje og træning. Vi er dedikerede til at støtte dig i at skabe det mest opfyldende og sunde liv for din hund. Hos Hundepoten forstår vi, at hver hunderace er unik, og det er derfor, vi er her for at give skræddersyet vejledning til hver enkelt race.
+        </p>
+
+        <p>
+            Vores passionerede team af hundeeksperter og dyrlæger er her for at give dig de bedste råd og tips om sundhed, pleje og træning, der er skræddersyet til din hunds behov. Uanset om din hund er en energisk Border Collie, en kærlig Labrador Retriever eller en elegant Dalmatiner, har vi de oplysninger, du har brug for, for at sikre, at din hund lever et lykkeligt og sundt liv.
+        </p>
+
+        <p>
+            Fra ernæringsvejledning og helbredspleje til træningsmetoder og adfærdsrådgivning er Hundepoten din pålidelige partner på rejsen med din hund. Vores mission er at hjælpe dig med at forstå din hunds unikke behov og skabe et stærkt bånd mellem dig og din pelsede ven.
+
+        </p>
+
+        <p>
+            Uanset om du er en erfaren hundeejer eller lige har taget din første hvalp med hjem, er Hundepoten her for at være din troværdige ressource til alt, hvad der vedrører din hunds sundhed, pleje og træning. Gå ikke glip af vores omfattende artikler, vejledninger og ekspertinterviews, der er skræddersyet til at opfylde dine og din hunds behov. Velkommen til Hundepoten - hvor vi elsker hunde lige så meget som du gør!
+        </p>
+
+    </section>
+
+    <footer>
+        <ul>
+            <li>Kontakt</li>
+            <li>
+                <a href="mailto:hundepoten@poten.dk">Send E-mail</a>
+            </li>
+            <li>MMD 2024-2025</li>
+            <li>RMR</li>
+        </ul>
+    </footer>
 </body>
 </html>
