--- a/guide.html
+++ b/guide.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="../Hundepoten/CSS/style.css">
 </head>
 <body>
+<!--indsæt header når denne er færdig og stylet-->
+    
+    <section>
+        <h1>
+            Hvilken hund passer til jer?
+        </h1>
+        <p>
+            Når det kommer til at vælge den perfekte hund, er der flere vigtige faktorer at overveje, herunder hundens energiniveau og pelspleje. For eksempel, hvis du overvejer en hund som en <a href="engelsk_ft_springer_spaniel.html">Springer Spaniel</a>, skal du være opmærksom på dens naturlige entusiasme og behov for regelmæssig motion og mental stimulering. En Springer Spaniel er typisk en aktiv race, der trives med udfordrende aktiviteter og træning.
+        </p>
+
+        <p>
+            Pelspleje er en anden vigtig faktor at tage hensyn til, især hvis du eller dine familiemedlemmer har allergier eller hvis du ønsker at undgå omfattende pelspleje. Nogle hunderacer kræver regelmæssig børstning og trimning for at opretholde en sund og glansfuld pels, mens andre har brug for minimal vedligeholdelse.
+        </p>
+
+        <p>
+            Ved at tage hensyn til sådanne faktorer og ved at søge råd fra vores team hos Hundepoten kan du træffe en informeret beslutning om, hvorvidt en Springer Spaniel eller en anden race passer til dine behov og din livsstil. Uanset hvilken race du vælger, er vi her for at sikre, at du og din nye firbenede ven starter på det rigtige spor for et lykkeligt og sundt forhold.
+        </p>
+    </section>
     
 </body>
 </html>
