--- a/guide.html
+++ b/guide.html
@@ -25,6 +25,9 @@
             Ved at tage hensyn til sådanne faktorer og ved at søge råd fra vores team hos Hundepoten kan du træffe en informeret beslutning om, hvorvidt en Springer Spaniel eller en anden race passer til dine behov og din livsstil. Uanset hvilken race du vælger, er vi her for at sikre, at du og din nye firbenede ven starter på det rigtige spor for et lykkeligt og sundt forhold.
         </p>
     </section>
-    
+
+    <section>
+<!---fyld ud med mere information evt et billede-->
+    </section>
 </body>
 </html>
