1 sektion på springer lavet i html

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -7,6 +7,30 @@
     <link rel="stylesheet" href="../Hundepoten/CSS/style.css">
 </head>
 <body>
+    <!--indsæt header når den er færdig-->
+
+    <section>
+        <img src="../Hundepoten/img/springer.jpg" alt="Brun og hvid, flat coat springer spaniel, på gåtur">
+        <h1>
+            Engelsk FT Springer Spaniel
+        </h1>
+
+        <p>
+            Den engelske Springer Spaniel er kendt for sit livlige og venlige temperament, der gør den til en fantastisk ledsager både i hjemmet og i marken. Med sin energiske og ivrige natur er Springer Spanielen altid klar til at deltage i enhver aktivitet med entusiasme og dedikation.
+        </p>
+
+        <p>
+            Når det kommer til familieliv, er Springer Spanielen en sand fornøjelse at have omkring sig. Den er kendt for sin kærlighed til børn og sin tålmodige natur, hvilket gør den til en ideel følgesvend for aktive familier. Springer Spanielen trives med opmærksomhed og elsker at være en del af alle familiens aktiviteter, uanset om det er leg i haven eller lange gåture i skoven.
+        </p>
+        
+        <p>
+            Samtidig er Springer Spanielen også en fremragende jagthund med et instinktivt drive og en imponerende evne til at spore og hente bytte. Dens energi og smidighed gør den til en værdsat partner på jagtturen, hvor den kan arbejde hårdt og samtidig være lydhør over for kommandoer.
+        </p>
+
+        <p>
+            Uanset om du er på udkig efter en kærlig familiehund eller en dygtig jagtkammerat, er den engelske Springer Spaniel en alsidig og charmerende race, der vil berige dit liv med sin livlige personlighed og loyalitet.
+        </p>
+    </section>
     
 </body>
 </html>
