tilføjet sektion til springer samt footer til siderne

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -31,6 +31,40 @@
             Uanset om du er på udkig efter en kærlig familiehund eller en dygtig jagtkammerat, er den engelske Springer Spaniel en alsidig og charmerende race, der vil berige dit liv med sin livlige personlighed og loyalitet.
         </p>
     </section>
+
+    <section>
+        <h2>
+            Træning
+        </h2>
+
+        <p>
+            Træning er afgørende for at sikre, at din engelske Springer Spaniel udvikler sig til en velopdragen og lydig følgesvend. Med deres naturlige intelligens og vilje til at behage, er Springer Spaniels ofte ivrige efter at lære og arbejde sammen med deres ejere.
+        </p>
+
+        <p>
+            Når det kommer til træning af en Springer Spaniel, er konsistens og positiv forstærkning nøgleord. Disse hunde reagerer godt på belønninger såsom ros, godbidder og leg, hvilket gør dem til et glimrende valg for træning baseret på belønningssystemer. Ved at bruge positive træningsmetoder kan du opbygge tillid og styrke båndet mellem dig og din hund.
+        </p>
+
+        <p>
+            Da Springer Spanielen er en aktiv race med et naturligt jagtinstinkt, er det vigtigt at give dem tilstrækkelig mental og fysisk stimulering. Regelmæssig motion og leg er afgørende for at holde dem tilfredse og forhindre kedsomhed og destruktiv adfærd. 
+        </p>
+
+        <p> Træningsøvelser såsom lydighedstræning, sporarbejde og fysiske udfordringer vil hjælpe med at kanalisere deres energi på en positiv måde.
+            Ved at investere tid og engagement i træning kan du hjælpe din engelske Springer Spaniel med at realisere sit fulde potentiale som en velopdragen og lykkelig hund. Med den rette vejledning og tålmodighed vil du kunne opbygge et dybt og givende partnerskab med din firbenede ven.
+        </p>
+
+    </section>
+    
+    <footer>
+        <ul>
+            <li>Kontakt</li>
+            <li>
+                <a href="mailto:hundepoten@poten.dk">Send E-mail</a>
+            </li>
+            <li>MMD 2024-2025</li>
+            <li>RMR</li>
+        </ul>
+    </footer>
     
 </body>
 </html>
