--- a/guide.html
+++ b/guide.html
@@ -29,5 +29,16 @@
     <section>
 <!---fyld ud med mere information evt et billede-->
     </section>
+    
+    <footer>
+        <ul>
+            <li>Kontakt</li>
+            <li>
+                <a href="mailto:hundepoten@poten.dk">Send E-mail</a>
+            </li>
+            <li>MMD 2024-2025</li>
+            <li>RMR</li>
+        </ul>
+    </footer>
 </body>
 </html>
