rettet fil sti, tjekket der var hul igennem til stylesheet

--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HundePoten | Forside</title>
-    <link rel="stylesheet" href="../Hundepoten/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     <!--indsæt måske en description-->
 </head>
-<body>
+<body class="index">
     <header>
         <nav class="mobil">
             <a href="index.html">
-                <img src="../Hundepoten/img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
+                <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
             </a>
         </nav>
         <nav class="desktop">
             <a href="index.html">
-                <img src="../Hundepoten/img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
+                <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
                 HundePoten
             </a>
             <ul>
