lavet ændringer i mixins, rettet tekst, stylet nav og footer(WIP)

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/style.css">
     <!--indsæt måske en description-->
 </head>
-<body class="index">
+<body>
     <header>
         <nav class="mobil">
             <a href="index.html">
