stylet lidt btn og tilføjet hover(WIP), og generelle rettelser

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <strong>Så er i kommet til det rigtige sted!</strong> Her hos HundePoten har vi samlet en masse indformationer omkring træning, pleje og sundhed, som alt sammen sikre at i har en sund og rask hund.
         </p>
 
-        <a href="guide.html">Se vores guide!</a>
+        <a class="btn" href="guide.html">Se vores guide!</a>
     </section>
 
     <section>
