rettet btn, dog stadig wip

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -10,7 +10,7 @@
     <!--indsæt header når den er færdig-->
 
     <section>
-        <img src="../Hundepoten/img/springer.jpg" alt="Brun og hvid, flat coat springer spaniel, på gåtur">
+        <img src="img/springer.jpg" alt="Brun og hvid, flat coat springer spaniel, på gåtur">
         <h1>
             Engelsk FT Springer Spaniel
         </h1>
