sat poteaftryk ind bag på alle siderne.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!--indsæt måske en description-->
 </head>
 <body>
+    <img class="bg_img" src="img/potegang.svg" alt="poteaftryk">
     <header>
         <nav class="mobil">
             <a href="index.html">
