--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
+    <img class="bg_img" src="img/potegang.svg" alt="poteaftryk">
     <!--indsæt header når den er færdig-->
 
     <section>
