rettet btn til mobil, hover skal måske rettes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
     </header>
     
-    <section>
+    <section class="intro">
         <h1>
             Mangler i tips eller information omkring jeres hund?
         </h1>
