indsættelse af søgeikon i mobilnav, forsøg med anden bg

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
             </a>
-            
+            <img src="/img/soeg.svg" alt="Lup, soegeikon">
         </nav>
         <nav class="desktop">
             <a href="index.html">
@@ -33,7 +33,7 @@
         </nav>
     </header>
     <main>
-        <img class="bg_img" src="img/potegang.svg" alt="poteaftryk">
+        <img class="bg_img" src="img/poter_ben.svg" alt="poteaftryk">
         <section class="intro">
             <h1>
                 Mangler i tips eller information omkring jeres hund?
