media for nav wip

--- a/index.html
+++ b/index.html
@@ -13,25 +13,28 @@
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
             </a>
+
             <img src="/img/soeg.svg" alt="Lup, soegeikon">
         </nav>
+
         <nav class="desktop">
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
-                HundePoten
             </a>
             <ul>
-                <li>FYLD UD</li>
-                <li>FYLD UD</li>
+                <li><a href="Guide">Guide</a></li>
+                <li><a href="#">Lovgivning</a></li>
                 <li>
                     <form>
-                        <label class="visually-hidden" for="search"></label>
+                        <label class="visually-hidden" for="search">Søg</label>
                         <input type="search" id="search" placeholder="Søg" required>
                     </form>
                 </li>
+                <img src="/img/soeg.svg" alt="Lup, soegeikon">
             </ul>
         </nav>
     </header>
+
     <main>
         <img class="bg_img" src="img/poter_ben.svg" alt="poteaftryk">
         <section class="intro">
