tilføjet kommentarer til imorgen.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+        <!-------------------------------Mobil nav------------------------------------->
         <nav class="mobil">
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
@@ -17,7 +18,8 @@
             <img src="/img/soeg.svg" alt="Lup, soegeikon">
         </nav>
 
-        <nav class="desktop">
+        <!-------------------------------Desktop nav------------------------------------->
+        <nav class="desktop"><!--ret til at alle elementer er en del af li-->
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
             </a>
