rettet nav på desktop wip

--- a/index.html
+++ b/index.html
@@ -23,17 +23,13 @@
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
             </a>
-            <ul>
-                <li><a href="Guide">Guide</a></li>
-                <li><a href="#">Lovgivning</a></li>
-                <li>
-                    <form>
-                        <label class="visually-hidden" for="search">Søg</label>
-                        <input type="search" id="search" placeholder="Søg" required>
-                    </form>
-                </li>
+            <div>
+                <form>
+                    <label class="visually-hidden" for="search">Søg</label>
+                    <input type="search" id="search" placeholder="Søg" required>
+                </form>
                 <img src="/img/soeg.svg" alt="Lup, soegeikon">
-            </ul>
+            </div>
         </nav>
     </header>
 
