desktop nav done!

--- a/index.html
+++ b/index.html
@@ -14,14 +14,15 @@
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
             </a>
-
+            
             <img src="/img/soeg.svg" alt="Lup, soegeikon">
         </nav>
 
         <!-------------------------------Desktop nav------------------------------------->
-        <nav class="desktop"><!--ret til at alle elementer er en del af li-->
+       <nav class="desktop">
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
+                HundePoten
             </a>
             <div>
                 <form>
@@ -32,6 +33,8 @@
             </div>
         </nav>
     </header>
+
+        <!-------------------------------Indhold til siden------------------------------------->
 
     <main>
         <img class="bg_img" src="img/poter_ben.svg" alt="poteaftryk">
