tilføjet burgermenu ikon

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <header>
         <!-------------------------------Mobil nav------------------------------------->
         <nav class="mobil">
+            <a href="#">
+                <img src="img/bmenu.svg" alt="Menu">
+            </a>
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
             </a>
