forsøg på en dropdown wip

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HundePoten | Forside</title>
+    <title>HundePoten | Hjem</title>
     <link rel="stylesheet" href="CSS/style.css">
     <!--indsæt måske en description-->
 </head>
@@ -11,9 +11,15 @@
     <header>
         <!-------------------------------Mobil nav------------------------------------->
         <nav class="mobil">
-            <a href="#">
-                <img src="img/bmenu.svg" alt="Menu">
-            </a>
+            <div class="dropdown-box">
+                <img src="img/bmenu.svg" alt="Menu ikon" class="dropdown-toggle">
+                <div>
+                    <a href="guide.html">Guide</a>
+                    <a href="#">Lovgivning</a>
+                    <a href="#">Hvordan kan du gøre en forskel?</a>
+                </div>
+                
+            </div>
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
             </a>
@@ -79,9 +85,9 @@
     </main>
     <footer>
         <ul>
-            <li>Kontakt</li>
+            <li>Kontakt os</li>
             <li>
-                <a href="mailto:hundepoten@poten.dk">Send E-mail</a>
+                <a href="mailto:hundepoten@poten.dk">Send os en e-mail her!</a>
             </li>
             <li>MMD 2024-2025</li>
             <li>RMR</li>
