tilføjet forside billede, en tykkere version af burgermenu og lup(denne ændres måske) og tilføjet et aria label til forside billedet

--- a/index.html
+++ b/index.html
@@ -11,20 +11,12 @@
     <header>
         <!-------------------------------Mobil nav------------------------------------->
         <nav class="mobil">
-            <div class="dropdown-box">
-                <img src="img/bmenu.svg" alt="Menu ikon" class="dropdown-toggle">
-                <div>
-                    <a href="guide.html">Guide</a>
-                    <a href="#">Lovgivning</a>
-                    <a href="#">Hvordan kan du gøre en forskel?</a>
-                </div>
-                
-            </div>
+            <img src="img/bmenu.svg" alt="Menu ikon">
             <a href="index.html">
                 <img src="img/pote_ikon.svg" alt="aftryk af en hundepote, ved klik navigerer til forsiden">
             </a>
             
-            <img src="/img/soeg.svg" alt="Lup, soegeikon">
+            <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
         </nav>
 
         <!-------------------------------Desktop nav------------------------------------->
@@ -38,7 +30,7 @@
                     <label class="visually-hidden" for="search">Søg</label>
                     <input type="search" id="search" placeholder="Søg" required>
                 </form>
-                <img src="/img/soeg.svg" alt="Lup, soegeikon">
+                <img src="/img/soegeikon.svg" alt="Lup, soegeikon">
             </div>
         </nav>
     </header>
@@ -48,6 +40,7 @@
     <main>
         <img class="bg_img" src="img/poter_ben.svg" alt="poteaftryk">
         <section class="intro">
+            <img src="img/shallow-focus-vertical-shot-cute-golden-retriever-puppy-sitting-grass-ground.jpg" alt="billede af en golden retriever hvalp"><a class="ref" href="https://www.freepik.com/free-photo/shallow-focus-vertical-shot-cute-golden-retriever-puppy-sitting-grass-ground_12177096.htm#fromView=search&page=1&position=6&uuid=0c42d39b-f19a-4c3e-a6fc-12b2271f664b" aria-label="Billede kilde">Image by wirestock on Freepik</a>
             <h1>
                 Mangler i tips eller information omkring jeres hund?
             </h1>
