--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             </div>
         </nav>
     </header>
-
+    
+    <img class="bg_img" src="img/potegang.svg" alt="poteaftryk" aria-hidden="true">
         <!-------------------------------Indhold til siden------------------------------------->
 
     <main>
-        <img class="bg_img" src="img/poter_ben.svg" alt="poteaftryk">
         <section class="intro">
            <div class="intro_img">
                 <img src="img/shallow-focus-vertical-shot-cute-golden-retriever-puppy-sitting-grass-ground.jpg" alt="billede af en golden retriever hvalp">
@@ -59,7 +59,7 @@
 
         <section>
             <h2>
-                Mød HundePoten
+                Mød HundePoten!
             </h2>
             
             <p>
