tilføjet liste i html guide

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HundePoten | Engelsk FT Springer Spaniel</title>
+    <title>HundePoten | Engelsk Springer Spaniel</title>
     <link rel="stylesheet" href="CSS/style.css">
 </head>
 <body>
@@ -42,7 +42,7 @@
         <section>
             <img src="img/springer.jpg" alt="Brun og hvid, flat coat springer spaniel, på gåtur">
             <h1>
-                Engelsk FT Springer Spaniel
+                Engelsk Springer Spaniel
             </h1>
 
             <p>
