--- a/guide.html
+++ b/guide.html
@@ -33,7 +33,7 @@
             </div>
         </nav>
     </header>
-    
+
     <img class="bg_img" src="img/potegang.svg" alt="poteaftryk" aria-hidden="true">
 
     <main>
@@ -55,7 +55,33 @@
         </section>
 
         <section>
-    <!---fyld ud med mere information evt et billede-->
+            <h2>
+                I denne over sigt kan i klikke jer videre og se hvad den specifikke race har behov for
+            </h2>
+            
+            <p>A</p>
+            <p>B</p>
+            <p>C</p>
+            <p>D</p>
+            <p>E</p>
+            <ul>
+                <li><a href="engelsk_ft_springer_spaniel.html">Engelsk Springer Spaniel</a></li>
+            </ul>
+            <p>F</p>
+            <p>G</p>
+            <p>H</p>
+            <p>I</p>
+            <p>J</p>
+            <p>K</p>
+            <p>L</p>
+            <p>M</p>
+            <p>N</p>
+            <p>O</p>
+            <p>P</p>
+            <p>Q</p>
+            <p>R</p>
+            <p>S</p>
+            <p>T</p>
         </section>
     </main>
     <footer>
