ændret overskrift og tilføjet p

--- a/guide.html
+++ b/guide.html
@@ -56,8 +56,11 @@
 
         <section class="oversigt">
             <h2>
-                I denne over sigt kan i klikke jer videre og se hvad den specifikke race har behov for
+                Oversigt over racer
             </h2>
+            <p>
+                Her kan i se de hunde racer der er, ved at klikke jer ind på dem kan i se deres specifikke behov. 
+            </p>
             <div>
                 <div class="a-j">
                     <p>A</p>
