rettet billede på springer siden

--- a/guide.html
+++ b/guide.html
@@ -54,14 +54,15 @@
             </p>
         </section>
 
-        <section class="oversigt">
+        <section>
+
             <h2>
                 Oversigt over racer
             </h2>
             <p>
                 Her kan i se de hunde racer der er, ved at klikke jer ind på dem kan i se deres specifikke behov. 
             </p>
-            <div>
+            <div class="oversigt">
                 <div class="a-j">
                     <p>A</p>
                     <p>B</p>
