rettet bg billede på siden

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -34,7 +34,7 @@
         </nav>
     </header>
 
-    <img class="bg_img" src="img/potegang.svg" alt="poteaftryk" aria-hidden="true">
+    <img class="bg_img" src="img/poter_ben.svg" alt="poteaftryk" aria-hidden="true">
 
 <!-------------------------------Indhold til siden------------------------------------->
     <main>
