--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </nav>
     </header>
 
-    <img class="bg_img" src="img/potegang.svg" alt="poteaftryk" aria-hidden="true">
+    <img class="bg_img" src="img/poter_ben.svg" alt="poteaftryk" aria-hidden="true">
         <!-------------------------------Indhold til siden------------------------------------->
 
     <main>
