rettelser, kommentarer og splittelse af en sektion

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -39,7 +39,7 @@
 <!-------------------------------Indhold til siden------------------------------------->
     <main>
         <!-------------------------------Generel info-humør/sektion 1------------------------------------->
-        <section class="ES_intro">
+        <section class="ES_intro"><!--Ret filstørrelse!-->
             <img src="img/springer.jpg" alt="Brun og hvid, flat coat springer spaniel, på gåtur" class="ES">
                 <h1>
                     Engelsk Springer Spaniel
@@ -108,6 +108,8 @@
                 Udover ørepleje er det vigtigt at holde øje med andre tegn på generel sundhedsproblemer, såsom ændringer i spise- eller drikkevaner, overdreven sløvhed, vægttab eller unormale afføringsmønstre. Regelmæssige veterinærtjek og opmærksomhed på din hunds adfærd og velbefindende vil hjælpe med at sikre, at eventuelle sundhedsproblemer opdages og behandles tidligt. Ved at tage sig godt af din engelske Springer Spaniels generelle sundhed kan du bidrage til at sikre, at den lever et langt, sundt og lykkeligt liv som din trofaste følgesvend.
             </p>
 
+        </section>
+        <section>
             <h3>
                 Et tip for din, din dyrlæge og din hunds sikkerhed
             </h3>
