--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <main>
         <section class="intro">
-           <div class="intro_img">
+           <div class="intro_img"> <!--Ret filstørrelse!-->
                 <img src="img/shallow-focus-vertical-shot-cute-golden-retriever-puppy-sitting-grass-ground.jpg" alt="billede af en golden retriever hvalp">
                 <a class="ref" href="https://www.freepik.com/free-photo/shallow-focus-vertical-shot-cute-golden-retriever-puppy-sitting-grass-ground_12177096.htm#fromView=search&page=1&position=6&uuid=0c42d39b-f19a-4c3e-a6fc-12b2271f664b" aria-label="Billede kilde">Image by wirestock on Freepik</a>
            </div>
