rettet tekst i index så det passer bedre

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </h2>
             
             <p>
-                Velkommen til Hundepoten, din guide til hundesundhed, pleje og træning. Vi er dedikerede til at støtte dig i at skabe det mest opfyldende og sunde liv for din hund. Hos Hundepoten forstår vi, at hver hunderace er unik, og det er derfor, vi er her for at give skræddersyet vejledning til hver enkelt race.
+                Velkommen til Hundepoten, din guide til hundesundhed, pleje og træning. Vi er en non-profit organisation dedikeret til at støtte dig i at skabe det mest opfyldende og sunde liv for din hund. Hos Hundepoten forstår vi, at hver hunderace er unik, og det er derfor, vi er her for at give skræddersyet vejledning til hver enkelt race.
             </p>
 
             <p>
@@ -71,12 +71,12 @@
             </p>
 
             <p>
-                Fra ernæringsvejledning og helbredspleje til træningsmetoder og adfærdsrådgivning er Hundepoten din pålidelige partner på rejsen med din hund. Vores mission er at hjælpe dig med at forstå din hunds unikke behov og skabe et stærkt bånd mellem dig og din pelsede ven.
+                Fra ernæringsvejledning og helbredspleje til træningsmetoder og adfærdsrådgivning er Hundepoten din pålidelige partner på rejsen med din hund. Vores mission som non-profit organisation er at hjælpe dig med at forstå din hunds unikke behov og skabe et stærkt bånd mellem dig og din pelsede ven.
 
             </p>
 
             <p>
-                Uanset om du er en erfaren hundeejer eller lige har taget din første hvalp med hjem, er Hundepoten her for at være din troværdige ressource til alt, hvad der vedrører din hunds sundhed, pleje og træning. Gå ikke glip af vores omfattende artikler, vejledninger og ekspertinterviews, der er skræddersyet til at opfylde dine og din hunds behov. Velkommen til Hundepoten - hvor vi elsker hunde lige så meget som du gør!
+                Uanset om du er en erfaren hundeejer eller lige har taget din første hvalp med hjem, er Hundepoten her for at være din troværdige ressource til alt, hvad der vedrører din hunds sundhed, pleje og træning. 
             </p>
 
         </section>
