rettet tekst på oversigten under guide

--- a/guide.html
+++ b/guide.html
@@ -42,15 +42,15 @@
                 Hvilken hund passer til jer?
             </h1>
             <p>
-                Når det kommer til at vælge den perfekte hund, er der flere vigtige faktorer at overveje, herunder hundens energiniveau og pelspleje. For eksempel, hvis du overvejer en hund som en <a href="engelsk_ft_springer_spaniel.html">Springer Spaniel</a>, skal du være opmærksom på dens naturlige entusiasme og behov for regelmæssig motion og mental stimulering. En Springer Spaniel er typisk en aktiv race, der trives med udfordrende aktiviteter og træning.
+                Velkommen til vores oversigt over hunderacer! Her finder du en bred vifte af forskellige hunderacer, hver med deres unikke egenskaber og behov. Uanset om du allerede har en bestemt race i tankerne eller bare er nysgerrig efter at udforske forskellige muligheder, så er du kommet til det rette sted.
             </p>
 
             <p>
-                Pelspleje er en anden vigtig faktor at tage hensyn til, især hvis du eller dine familiemedlemmer har allergier eller hvis du ønsker at undgå omfattende pelspleje. Nogle hunderacer kræver regelmæssig børstning og trimning for at opretholde en sund og glansfuld pels, mens andre har brug for minimal vedligeholdelse.
+                Vores oversigt giver dig mulighed for at lære mere om de forskellige hunderacer og deres specifikke behov og pleje. Klik blot på navnet på den race, du er interesseret i, og du vil blive ført videre til en detaljeret side med mere information om racen, herunder plejeanbefalinger, træningstips og meget mere.
             </p>
 
             <p>
-                Ved at tage hensyn til sådanne faktorer og ved at søge råd fra vores team hos Hundepoten kan du træffe en informeret beslutning om, hvorvidt en Springer Spaniel eller en anden race passer til dine behov og din livsstil. Uanset hvilken race du vælger, er vi her for at sikre, at du og din nye firbenede ven starter på det rigtige spor for et lykkeligt og sundt forhold.
+                Uanset om du er på udkig efter en aktiv ledsager til lange vandreture eller en kærlig familiehund, håber vi, at vores oversigt vil hjælpe dig med at finde den perfekte kammerat til dit hjem. Så tag et kig rundt, og lad dig inspirere af de mange fantastiske hunderacer, der er derude!"
             </p>
         </section>
 
