tilføjet tips til springer siden

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -86,6 +86,15 @@
 
         </section>
 
+        <section>
+            <h3>
+                Tip!
+            </h3>
+            <p>
+                Et godt træningstip til Springer Spaniels er at inkludere både fysisk og mental udfordring i deres daglige rutine. Ud over regelmæssig motion og leg, bør du også give dem opgaver, der kræver tanke og problemløsning, såsom søg- og snuselege eller agilityøvelser. Ved at variere deres træning og give dem forskellige udfordringer, kan du hjælpe med at holde din Springer Spaniel engageret, glad og mentalt stimuleret, hvilket er nøglen til at opbygge et lykkeligt og sundt forhold mellem dig og din hund.
+            </p>
+        </section>
+
         <!-------------------------------Pelspleje/sektion 3------------------------------------->
         <section>
             <h2>
@@ -109,9 +118,10 @@
             </p>
 
         </section>
+
         <section>
             <h3>
-                Et tip for din, din dyrlæge og din hunds sikkerhed
+                Tip!
             </h3>
             
             <p>
