rettet jpeg fil størrelse, for bedre load tid, indsat ny bg til siden og gjort klar til indsættelse af et ikon mere til tips

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -34,13 +34,13 @@
         </nav>
     </header>
 
-    <img class="bg_img" src="img/poter_ben.svg" alt="poteaftryk" aria-hidden="true">
+    <img class="bg_img" src="img/bg.svg" alt="poteaftryk" aria-hidden="true">
 
 <!-------------------------------Indhold til siden------------------------------------->
     <main>
         <!-------------------------------Generel info-humør/sektion 1------------------------------------->
         <section class="ES_intro"><!--Ret filstørrelse!-->
-            <img src="img/springer.jpg" alt="Brun og hvid, flat coat springer spaniel, på gåtur" class="ES">
+            <img src="img/charlie.jpg" alt="Brun og hvid, flat coat springer spaniel, på gåtur" class="ES">
                 <h1>
                     Engelsk Springer Spaniel
                 </h1>
