--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
         </nav>
     </header>
 
-    <img class="bg_img" src="img/poter_ben.svg" alt="poteaftryk" aria-hidden="true">
+    <img class="bg_img" src="img/bg.svg" alt="poteaftryk" aria-hidden="true">
         <!-------------------------------Indhold til siden------------------------------------->
 
     <main>
         <section class="intro">
            <div class="intro_img"> <!--Ret filstørrelse!-->
-                <img src="img/shallow-focus-vertical-shot-cute-golden-retriever-puppy-sitting-grass-ground.jpg" alt="billede af en golden retriever hvalp">
+                <img src="img/golden retriever hvalp.jpg" alt="billede af en golden retriever hvalp">
                 <a class="ref" href="https://www.freepik.com/free-photo/shallow-focus-vertical-shot-cute-golden-retriever-puppy-sitting-grass-ground_12177096.htm#fromView=search&page=1&position=6&uuid=0c42d39b-f19a-4c3e-a6fc-12b2271f664b" aria-label="Billede kilde">Image by wirestock on Freepik</a>
            </div>
            <div class="intro_txt">
