stylet tips med ikon, ændrer dog ikonet da det ikke står nok ud

--- a/engelsk_ft_springer_spaniel.html
+++ b/engelsk_ft_springer_spaniel.html
@@ -86,10 +86,15 @@
 
         </section>
 
+        <!-------------------------------Tip 1------------------------------------->
         <section>
-            <h3>
-                Tip!
-            </h3>
+            <div class="lightbulb">
+                <h3>
+                    Tip!
+                </h3>
+                <img src="img/lightbulb.svg" alt="Lyspære ikon">
+            </div>
+
             <p>
                 Et godt træningstip til Springer Spaniels er at inkludere både fysisk og mental udfordring i deres daglige rutine. Ud over regelmæssig motion og leg, bør du også give dem opgaver, der kræver tanke og problemløsning, såsom søg- og snuselege eller agilityøvelser. Ved at variere deres træning og give dem forskellige udfordringer, kan du hjælpe med at holde din Springer Spaniel engageret, glad og mentalt stimuleret, hvilket er nøglen til at opbygge et lykkeligt og sundt forhold mellem dig og din hund.
             </p>
@@ -119,10 +124,14 @@
 
         </section>
 
+        <!-------------------------------Tip 2------------------------------------->
         <section>
-            <h3>
-                Tip!
-            </h3>
+            <div class="lightbulb">
+                <h3>
+                    Tip!
+                </h3>
+                <img src="img/lightbulb.svg" alt="Lyspære ikon">
+            </div>
             
             <p>
                 I tilfælde af at din engelske Springer Spaniel udviser tegn på angst, smerte eller aggression under ørepleje eller andre procedurer, kan det være nødvendigt at bruge en mundkurv for at sikre både din hunds og din egen sikkerhed. En mundkurv kan hjælpe med at forhindre utilsigtet bidning eller skader under undersøgelser eller behandlinger.
